Sidebar minor fixes, still collapsed hover issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1793,7 +1793,8 @@ textarea, input {
     display: flex;
     flex-direction: column;
     padding-bottom: 6rem;
-    overflow: hidden; }
+    overflow: hidden;
+    overflow-y: auto; }
     @media only screen and (min-width: 112.5em) {
       .dark-edition .sidebar .sidebar-wrapper,
       .light-edition .sidebar .sidebar-wrapper {
